@@ -84,5 +84,6 @@ Please get in touch to update your entry or let us know if you have contributed 
 - https://github.com/gusoer[Guido Sörmann]
 - https://github.com/beji[Björn Erlwein]
 - https://github.com/camminati[Tulio Camminati]
+- https://github.com/RoettingerJ[Joachim Röttinger]
 
 image::https://img.shields.io/github/contributors/doctoolchain/doctoolchain.svg[link=https://github.com/docToolchain/docToolchain/graphs/contributors]
